src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Valid/Simple/ValidSimple.php
<?php

namespace Valid\Simple;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

class ValidSimple extends ClarolineExtension
{
}