src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Invalid/UnexpectedTranslationKey2/InvalidUnexpectedTranslationKey2.php
<?php

namespace Invalid\UnexpectedTranslationKey2;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

class InvalidUnexpectedTranslationKey2 extends ClarolineExtension
{
    public function getNameTranslationKey()
    {
        return '';
    }
}